# BIDSInspec

./: README.md  bids_fx.py  bids_pybids_tutorial.py  ds114_validation.sh  pyproject.toml
.github/workflows/: lint.yaml
bidsinspec/: cli.py
bidsinspec/interfaces/: bvecs.py
bidsinspec/workflows/: report.py
