[tool.poetry]
name = "bidsinspec"
version = "0.1.0"
description = "Inspect your BIDS directory"
authors = ["aptinis <aptinis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybids = "^0.17.0"
nibabel = "^5.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
