[tool.poetry]
name = "bidsinspec"
version = "0.0.1"
description = "Inspect your BIDS directory"
authors = ["Ashley Ptinis <aptinis@gmail.com>", "Nancy Ortega <ortegane25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybids = "^0.17.0"
nibabel = "^5.2.1"
nireports = "^23.2.1"
jinja2 = "^3.1.4"
nipype = "^1.8.6"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
reorder-python-imports = "^3.13.0"

[tool.poetry.scripts]
bidsinspec = "bidsinspec.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
